<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dorahand_ros</name>
  <version>1.1.1</version>
  <description>TODO: Package description</description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dorahand</depend>
  <depend>boost</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  
</package>