cmake_minimum_required(VERSION 3.5)
project(dorahand_interfaces_ros2)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(std_msgs REQUIRED)
find_package(std_srvs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

set(srv_files
srv/ControlJoint.srv
srv/GetHandState.srv
srv/GraspControl.srv
srv/SetHandState.srv
)
rosidl_generate_interfaces(${PROJECT_NAME}
${srv_files}
DEPENDENCIES
std_msgs
)

ament_package()
